<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.0"
        android:text="@string/login_title"
        android:textColor="#F2F2F3"
        android:textSize="28sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="204dp"
        android:clipChildren="false"
        android:divider="@drawable/divider"
        android:dividerPadding="16dp"
        android:maxHeight="148dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:showDividers="middle|end">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginEnd="20dp"
            >

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="41dp"
                android:layout_height="18dp"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.015"
                android:text="@string/email_label"
                android:textColor="#F2F2F3"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_example"
                android:paddingStart="16dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._-"
                android:textColor="#F2F2F3"
                android:textColorHint="#B2B2B2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/passLabel"
                android:layout_width="58dp"
                android:layout_height="20dp"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.015"
                android:text="@string/pass_label"
                android:textColor="#F2F2F3"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passTextField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/roboto"
                android:hint="@string/pass_example"
                android:paddingStart="16dp"
                android:textColor="#F2F2F3"
                android:textColorHint="#B2B2B2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="14dp"
        android:paddingRight="20dp"
        android:paddingBottom="14dp"
        android:text="@string/login_title"
        android:textAllCaps="false"
        android:textColor="#F2F2F3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionsLayout"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="432dp">

        <LinearLayout
            android:id="@+id/registerLinearLayout"
            android:layout_width="175dp"
            android:layout_height="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/registerTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.03"
                android:text="Нету аккаунта? "
                android:textColor="#F2F2F3"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerTextView2"
                android:layout_width="167dp"
                android:layout_height="15dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.03"
                android:text="Регистрация"
                android:textColor="#12B956"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLinearLayout">

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="167dp"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.03"
                android:text="Забыл пароль"
                android:gravity="center"
                android:textColor="#12B956"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="502dp"
        android:background="#4D555E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLinearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/socialMediaLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="534dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/vkButton"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:background="@drawable/vk_button"
            android:backgroundTint="@null"
            android:gravity="center"
            android:src="@drawable/icon_vk"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/vk_button_description" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/okButton"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:background="@drawable/ok_button"
            android:gravity="center"
            android:src="@drawable/icon_ok"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/ok_button_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>